--- a/alt/package.json
+++ b/alt/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-firebase-hooks": "^5.1.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0"
   },
