--- a/alt/package.json
+++ b/alt/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "html2canvas": "^1.4.1",
+    "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
