--- a/alt/package.json
+++ b/alt/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
+    "export-to-csv": "^0.2.1",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
@@ -18,7 +20,9 @@
     "react-draggable": "^4.4.5",
     "react-firebase-hooks": "^5.1.1",
     "react-router": "^6.14.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "sheetjs-style": "^0.15.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
