--- a/alt/Dockerfile
+++ b/alt/Dockerfile
@@ -1,8 +1,8 @@
-FROM node
-WORKDIR /app
-COPY package.json .
-RUN npm i
-COPY . .
+# FROM node
+# WORKDIR /app
+# COPY package.json .
+# RUN npm i
+# COPY . .
 
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+# EXPOSE 5173
+# CMD ["npm", "run", "dev"]
