--- a/alt/tsconfig.json
+++ b/alt/tsconfig.json
@@ -14,13 +14,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    "checkJs": false,
-
     /* Linting */
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
