--- a/alt/package.json
+++ b/alt/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.5.0",
     "crypto-js": "^4.1.1",
     "export-to-csv": "^0.2.1",
     "fs": "^0.0.1-security",
@@ -40,6 +41,7 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-cross-origin-isolation": "^0.1.6"
   }
 }
