--- a/alt/package.json
+++ b/alt/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.5.0",
+    "@react-oauth/google": "^0.11.1",
     "crypto-js": "^4.1.1",
     "export-to-csv": "^0.2.1",
     "fs": "^0.0.1-security",
